nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: awx
  name: awx-nodeport
  labels:
    name: awx
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30180
      name: http
    - port: 443
      nodePort: 31443
      name: https
