ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
spec:
  defaultBackend:
    service:
      name: awx-service
      port:
        number: 80
